feat: Add timezone configuration to the settings dialog
- Implemented a timezone selection feature in the ConfigDialog.
- Users can select from local, UTC, and common European and American timezones.
- Added a sample display of the current time based on the selected timezone.

feat: Enhance JiraGridView with improved error handling for InfoBar

- Added error handling for the InfoBar display to fallback to console print on failure.
- Introduced a new method `show_info` for displaying informational messages.

feat: Introduce network status indicator in the main window

- Added a NetworkStatusIndicator to show internet and JIRA connection status.
- Implemented a context menu for the network status indicator to check connection status.

feat: Create MiniTimerDialog for tracking time on JIRA tickets

- Developed a new dialog for tracking time with play, pause, and stop functionality.
- Includes a note field for users to add context to the tracked time.

refactor: Change MiniWidgetView to a regular dialog

- Updated MiniWidgetView to be a QDialog instead of a borderless widget.
- Adjusted styles and layout to fit the new dialog format.

feat: Add network status indicator functionality

- Implemented connection status updates for internet and JIRA.
- Added tooltip updates based on connection status.

feat: Enhance NotesGridDialog with action buttons for Jira tickets

- Added action buttons for opening JIRA details and starting timers directly from the notes grid.
- Improved date formatting to display local time for updated notes.

feat: Implement sorting and filtering in NotesManagerDialog

- Added sortable table items for better management of notes.
- Implemented functionality to open JIRA details and start timers from the notes manager.

fix: Ensure proper handling of Jira key changes in NotesManagerDialog

- Updated button states based on the presence of a Jira key.
- Added context menu for double-click actions on the notes table.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ PyQt6 # Or PySide6, as per requirements. I'll use PyQt6 as the primary example.
 jira
 markdown
 keyring
+pytz  # For timezone handling
+python-dateutil  # For advanced date parsing
